[HOTFIX] Run MySQL on 0.0.0.0:3306 and updat the default user

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,4 +1,6 @@
 [mysqld]
+port=3306
+bind-address = 0.0.0.0
 connect_timeout = 10
 innodb_buffer_pool_size = 128M
 innodb_data_file_path = ibdata1:10M:autoextend
