Fixed tests for rewrite configs.

--- a/dump/pkg/config/test-data/mixed.yml
+++ b/dump/pkg/config/test-data/mixed.yml
@@ -2,9 +2,6 @@ ignore:
   - foo
 nodata:
   - bar
-sanitize:
-  tables:
-    - name: baz
-      fields:
-        - name: qux
-          value: quux
+rewrite:
+  baz:
+    qux: quux
