Adds SQL Mode: NO_AUTO_VALUE_ON_ZERO

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 port=3306
 bind-address = 0.0.0.0
+sql-mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
 connect_timeout = 10
 innodb_buffer_pool_size = 128M
 innodb_data_file_path = ibdata1:10M:autoextend
