--- a/mysql/tests.yml
+++ b/mysql/tests.yml
@@ -1,42 +1,40 @@
 schemaVersion: '2.0.0'
 
 commandTests:
-  - name: 'ready for connections'
-    command: "timeout"
+  - name: 'SQL Mode Set: NO_AUTO_VALUE_ON_ZERO'
+    command: "mysqld"
     args:
-      - "5" # This should be all the time we need to boot and verify MySQLs output.
-      - "mysqld"
-    # MySQL logs all it's startup output to stderr.
-    expectedError:
-      - "mysqld: ready for connections."
-      - "mysqld: Shutdown complete"
+      - --verbose
+      - --help
+    expectedOutput:
+      - "NO_AUTO_VALUE_ON_ZERO"
 
 fileExistenceTests:
   - name: 'Database: Backup'
     path: '/usr/local/bin/database-backup'
     shouldExist: true
     permissions: '-rwxr-xr-x'
-  
+
   - name: 'Database: Create'
     path: '/usr/local/bin/database-create'
     shouldExist: true
     permissions: '-rwxr-xr-x'
-  
+
   - name: 'Database: Import'
     path: '/usr/local/bin/database-import'
     shouldExist: true
     permissions: '-rwxr-xr-x'
-  
+
   - name: 'Database: Restore'
     path: '/usr/local/bin/database-restore'
     shouldExist: true
     permissions: '-rwxr-xr-x'
-  
+
   - name: 'MySQL: Start'
     path: '/usr/local/bin/mysql-start'
     shouldExist: true
     permissions: '-rwxr-xr-x'
-  
+
   - name: 'MySQL: Stop'
     path: '/usr/local/bin/mysql-stop'
     shouldExist: true
