Adds multiarch v2 builds

--- a/dump/Dockerfile
+++ b/dump/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.12 as build
+ARG ARCH=amd64
+
 ADD . /go/src/github.com/skpr/mtk/dump
 WORKDIR /go/src/github.com/skpr/mtk/dump
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o bin/mtk-dump github.com/skpr/mtk/dump
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=$ARCH go build -a -o bin/mtk-dump github.com/skpr/mtk/dump
 
 FROM skpr/mtk-mysql:latest
 USER root
