--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,110 @@
-version: 2
+version: 2.1
 
-build: &build
-  
-jobs:
-  build_release:
-    docker:
-      - image: previousnext/container-builder:latest
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run: make build
-      - run: make test
-      - run: |
-          if [ "$CIRCLE_BRANCH" == "master" ]; then
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            make push
-          fi
+executors:
+  amd64:
+    machine:
+      image: ubuntu-2004:202111-02
+    resource_class: medium
+
+  arm64:
+    machine:
+      image: ubuntu-2004:202111-02
+    resource_class: arm.medium
+
+platforms: &platforms
+  - amd64
+  - arm64
 
 workflows:
-  version: 2
-
   build:
     jobs:
-      - build_release
+      - build:
+          context: docker-publishing
+          matrix:
+            parameters:
+              executor: *platforms
+      - manifest:
+          context: docker-publishing
+          requires: [ build ]
+          filters:
+            branches:
+              only: [ master, multiarch ]
 
   nightly:
     jobs:
-      - build_release
+      - build:
+          context: docker-publishing
+          matrix:
+            parameters:
+              executor: *platforms
+      - manifest:
+          context: docker-publishing
+          requires: [ build ]
+          filters:
+            branches:
+              only: [ master ]
     triggers:
       - schedule:
-          # Scheduled build for 2am AEST nightly
+          # Scheduled build for 2am AEST nightly.
           cron: "0 15 * * *"
           filters:
             branches:
-              only:
-                - master
+              only: [ master ]
+            
+jobs:
+  build:
+    parameters:
+      executor:
+        type: string
+    machine: true
+    executor: << parameters.executor >>
+    steps:
+      - checkout
+      - run:
+          name: Get SHA1 version
+          command: |
+            SHA1_VERSION="v2-$(git rev-parse --short HEAD)"
+            echo 'export SHA1_VERSION=$SHA1_VERSION' >> $BASH_ENV
+      - run:
+          name: "Install: Container Structure Tests"
+          command: |
+            curl -LO https://storage.googleapis.com/container-structure-test/v1.11.0/container-structure-test-linux-<< parameters.executor >> && \
+            mv container-structure-test-linux-<< parameters.executor >> container-structure-test && \
+            chmod +x container-structure-test && \
+            sudo mv container-structure-test /usr/local/bin/
+      - run:
+          name: Build, Test and Release
+          command: |
+            SHA1_VERSION="v2-$(git rev-parse --short HEAD)"
+            make build ARCH=<< parameters.executor >> VERSION_TAG=v2-latest
+            make build ARCH=<< parameters.executor >> VERSION_TAG=${SHA1_VERSION}
+      - when:
+          condition:
+            or:
+              - equal: ["master", << pipeline.git.branch >> ]
+              - equal: [ "multiarch", << pipeline.git.branch >> ]
+          steps:
+            - run:
+                name: "Push image"
+                command: |
+                  echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+                  SHA1_VERSION="v2-$(git rev-parse --short HEAD)"
+                  make push ARCH=<< parameters.executor >> VERSION_TAG=v2-latest
+                  make push ARCH=<< parameters.executor >> VERSION_TAG=${SHA1_VERSION}
+
+  manifest:
+    docker:
+      - image: cimg/base:2022.02
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+          version: 20.10.7
+      - run:
+          name: Push Manifest
+          command: |
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            SHA1_VERSION="v2-$(git rev-parse --short HEAD)"
+            make manifest VERSION_TAG=v2-latest
+            make manifest VERSION_TAG=${SHA1_VERSION}
