--- a/dump/Dockerfile
+++ b/dump/Dockerfile
@@ -1,6 +1,7 @@
-ARG IMAGE_TAG=v2-latest
-FROM golang:1.12 as build
 ARG ARCH=amd64
+ARG IMAGE_TAG=v2-latest-${ARCH}
+FROM golang:1.12 as build
+ARG ARCH
 ARG IMAGE_TAG
 
 ADD . /go/src/github.com/skpr/mtk/dump
