--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,7 +1,7 @@
 [mysqld]
 port=3306
 bind-address = 0.0.0.0
-sql-mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
+sql_mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
 connect_timeout = 10
 innodb_buffer_pool_size = 128M
 innodb_data_file_path = ibdata1:10M:autoextend
@@ -15,9 +15,6 @@ max_binlog_size = 100M
 max_connections = 151
 max_heap_table_size = 32M
 open_files_limit = 2048
-query_cache_limit = 256K
-query_cache_size = 64M
-query_cache_type = 1
 skip-external-locking
 thread_cache_size = 8
 thread_stack = 256K
