--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -8,7 +8,7 @@ innodb_data_file_path = ibdata1:10M:autoextend
 innodb_file_per_table = 1
 innodb_flush_method = O_DIRECT
 innodb_log_buffer_size = 8M
-innodb_log_file_size = 64M
+innodb_redo_log_capacity = 134217728
 key_buffer_size = 16M
 max_allowed_packet = 256M
 max_binlog_size = 100M
