--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -2,6 +2,7 @@
 port=3306
 bind-address = 0.0.0.0
 sql_mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
+default-authentication-plugin=mysql_native_password
 connect_timeout = 10
 innodb_buffer_pool_size = 128M
 innodb_data_file_path = ibdata1:10M:autoextend
