Changes based on upstream MySQL 8.x images
Signed-off-by: Karl Hepworth <karl@previousnext.com.au>

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -3,35 +3,44 @@ FROM ubuntu:22.04
 ENV TZ=Etc/UTC
 ENV DEBIAN_FRONTEND=noninteractive
 
+RUN groupadd -r mysql && useradd -r -g mysql mysql
+
+RUN mkdir /docker-entrypoint-initdb.d
+
 RUN apt-get update \
-    && apt-get -y install \
+    && apt-get -y install --no-install-recommends  \
+      bzip2 \
       tzdata \
+      openssl \
       bash \
       mysql-client \
       mysql-server \
+      perl \
+      xz-utils \
+      zstd \
     && apt-get clean \
     && rm -Rf /var/lib/apt/lists/* \
-    && rm -Rf /usr/share/doc && rm -Rf /usr/share/man
+    && rm -Rf /usr/share/doc \
+    && rm -Rf /usr/share/man \
+    && rm -rf /var/lib/mysql \
+    && mkdir -p /opt/mysql /var/lib/mysql /var/run/mysqld \
+    && chown -R mysql:mysql /opt/mysql /var/lib/mysql /var/run/mysqld \
+    && chmod 1777 /opt/mysql /var/lib/mysql /var/run/mysqld
 
-RUN mkdir -p /opt/mysql/mysql
-ADD my.cnf /opt/mysql/mysql/etc/my.cnf
-RUN mysqld \
-      --initialize \
-      --user=mysql  \
-      --basedir=/opt/mysql/mysql  \
-      --datadir=/opt/mysql/mysql/data
+VOLUME /var/lib/mysql
 
-RUN mkdir -p /run/mysqld && \
-    chown mysql:mysql /run/mysqld
-VOLUME /run/mysqld
-
+ADD my.cnf /etc/mysql/my.cnf
 COPY scripts /usr/local/bin
 RUN chmod +x /usr/local/bin/*
-
-ENV MYSQL_TCP_PORT=3306
+RUN mysqld --validate-config
 
 USER mysql
 
-CMD ["/usr/local/bin/mysql-start"]
+RUN mysqld \
+      --initialize \
+      --user=mysql \
+      --basedir=/opt/mysql  \
+      --datadir=/opt/mysql/data
 
-RUN mysqld --validate-config
+EXPOSE 3306 33060
+CMD ["/usr/local/bin/mysql-start"]
