--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -7,6 +7,7 @@ RUN groupadd -r mysql && \
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+      netcat \
       gnupg && \
     rm -rf /var/lib/apt/lists/*
 
@@ -25,12 +26,16 @@ RUN { \
       mysql-community-server && \
     rm -rf /var/lib/apt/lists/*
 
+RUN mkdir -p /run/mysqld && \
+    chown mysql:mysql /run/mysqld
+VOLUME /run/mysqld
+
 COPY scripts /usr/local/bin
 RUN chmod +x /usr/local/bin/*
 
 ENV MYSQL_TCP_PORT=3306
 
-ADD my.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
+ADD my.cnf /etc/mysql/mysql.cnf
 
 USER mysql
 
