--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,8 +1,7 @@
 [mysqld]
 port=3306
 bind-address = 0.0.0.0
-sql_mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
-default-authentication-plugin=mysql_native_password
+sql_mode=STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
 connect_timeout = 10
 innodb_buffer_pool_size = 128M
 innodb_data_file_path = ibdata1:10M:autoextend
@@ -20,5 +19,5 @@ skip-external-locking
 thread_cache_size = 8
 thread_stack = 256K
 tmp_table_size = 32M
-skip-host-cache
+host_cache_size=0
 skip-name-resolve
