--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,4 +1,6 @@
 [mysqld]
+skip_name_resolve = true
+default_authentication_plugin=mysql_native_password
 port=3306
 bind-address = 0.0.0.0
 sql_mode=STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_AUTO_VALUE_ON_ZERO
@@ -20,4 +22,3 @@ thread_cache_size = 8
 thread_stack = 256K
 tmp_table_size = 32M
 host_cache_size=0
-skip-name-resolve
